# stacje_radarowe

./: .gitignore
stacje_radarowe/: CMakeLists.txt  Doxyfile  README.md  README.txt  apiworker.cpp  apiworker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  requirements.txt
stacje_radarowe/docs/html/: _c_make_c_compiler_id_8c.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_c_make_files_23_830_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_c_make_files_23_830_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2include_2ui__mainwindow_8h.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2include_2ui__mainwindow_8h.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2include_2ui__mainwindow_8h_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2moc__predefs_8h.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2moc__predefs_8h.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2moc__predefs_8h_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2mainwindow__lib__autogen_2mocs__compilation_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2include_2ui__mainwindow_8h.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2include_2ui__mainwindow_8h.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2include_2ui__mainwindow_8h_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2moc__predefs_8h.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2moc__predefs_8h.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2moc__predefs_8h_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2mocs__compilation_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2stacje__radarowe__autogen_2mocs__compilation_8cpp.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2include_2ui__mainwindow_8h.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2include_2ui__mainwindow_8h.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2include_2ui__mainwindow_8h_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2moc__predefs_8h.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2moc__predefs_8h.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2moc__predefs_8h_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2mocs__compilation_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2tests__autogen_2mocs__compilation_8cpp.js  _desktop___qt__6__9__0___min_g_w__64__bit-_profile_2_c_make_files_23_830_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_profile_2_c_make_files_23_830_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _desktop___qt__6__9__0___min_g_w__64__bit-_profile_2mainwindow__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_profile_2mainwindow__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.js  (+170 more)
stacje_radarowe/docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_3.js  all_4.js  all_5.js  all_6.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_5.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  (+4 more)
stacje_radarowe/test/: test_main.cpp
stacje_radarowe/tests/: test_main.cpp
